force-app/main/default/objects/Cuti_Poin_Karyawan__c/Cuti_Poin_Karyawan__c.object-meta.xml
<CustomObject>
    <label>Master Cuti &amp; Poin Karyawan</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Cuti &amp; Poin Karyawan</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>