force-app/main/default/objects/Cuti_Poin_Karyawan__c/fields/Cuti_Tahun_Ini__c.field-meta.xml
<CustomField>
    <fullName>Cuti_Tahun_Ini__c</fullName>
    <label>Cuti Tahun Ini</label>
    <summarizedField>Cuti_Karyawan__c.Sisa_Cuti__c</summarizedField>
    <summaryFilterItems>
        <field>Cuti_Karyawan__c.Tahun_Cuti__c</field>
        <operation>equals</operation>
        <value>Tahun Ini</value>
    </summaryFilterItems>
    <summaryForeignKey>Cuti_Karyawan__c.Cuti_Poin_Karyawan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>