force-app/main/default/objects/Cuti_Poin_Karyawan__c/fields/Poin__c.field-meta.xml
<CustomField>
    <fullName>Poin__c</fullName>
    <inlineHelpText>Poin yang dimiliki oleh agent  (poin dapat bertambah jika mendapatkan achivment)</inlineHelpText>
    <label>Poin</label>
    <summarizedField>Poin_Karyawan__c.Poin__c</summarizedField>
    <summaryForeignKey>Poin_Karyawan__c.Cuti_Poin_Karyawan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>