force-app/main/default/objects/Cuti_Poin_Karyawan__c/fields/Poin_Terpakai__c.field-meta.xml
<CustomField>
    <fullName>Poin_Terpakai__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Poin yang telah digunakan oleh agent</inlineHelpText>
    <label>Poin Terpakai</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>