force-app/main/default/objects/Cuti_Poin_Karyawan__c/fields/Sisa_Poin__c.field-meta.xml
<CustomField>
    <fullName>Sisa_Poin__c</fullName>
    <formula>Poin__c -  Poin_Terpakai__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sisa poin yang dimiliki oleh agent (dihitung dari poin yang didapatkan - poin yang digunakan)</inlineHelpText>
    <label>Sisa Poin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>